# moonenv

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  serverless.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  doc-improvement.yml  feature-request-template.md
cli/: Cargo.toml
cli/moonenv/: Cargo.toml
cli/moonenv/src/: main.rs
cli/src/: api_util.rs  auth_handler.rs  cli_struct.rs  config_handler.rs  env_handler.rs  main.rs
cli/src/moonenv_config/: file_handler.rs  mod.rs
handle/: operations.go
server/: .env.example  Makefile  cdk.json  go.mod  go.sum  package-lock.json  package.json  server.go  server_test.go  serverless.yml
server/bucket-service/: service.go
server/endpoints/bucket-s3/: main.go
server/endpoints/download-file/: main.go
server/endpoints/orchestrator/: main.go
server/endpoints/upload-file/: main.go
server/go/: go.sum
server/go/bucket-service/: service.go
server/go/endpoints/upload-file/: main.go
server/handle/: operations.go
server/lambdas/: go.sum
server/lambdas/bucket-service/: service.go
server/lambdas/download-file/: main.go
server/lambdas/endpoints/auth/: token_code.go
server/lambdas/endpoints/orchestrator/: main.go  orchestrator.go  service.go
server/lambdas/handle/: api-reponse.go  operations.go
server/lambdas/orchestrator-service/: service.go
server/lambdas/upload-file/: main.go
server/orchestrator-service/: service.go
server/schema/: main.go
server/stacks/: api-gateway.go  cognito.go  dynamo.go  lambda.go  route-53.go  s3.go
(+16 files in other folders)
