[package]
name = "moonenv"
version = "0.4.0"
edition = "2021"
authors = [
    "João Vitor Teixeira <joaovitorteixeira.dev@gmail.com>",
    "Mateus José Barbosa <dev.mateusbarbosa@gmail.com>",
]
description = "A tool to manage environment variables"
readme = "../README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PBH-Tech/moonenv"
repository = "https://github.com/PBH-Tech/moonenv"
keywords = ["cli", "env"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
confy = { version = "0.6.1", features = [
    "yaml_conf",
], default-features = false }
dirs = "5.0.1"
open = "5.3.1"

[dev-dependencies]
tempfile = "3"
